--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "ext-json": "*"
     },
     "autoload": {
-        "psr-4": {
-            "Dotsplatform\\CashbackClient\\": "src/App/CashbackClient"
-        }
+        "classmap": [
+            "src/App/CashbackClient.php"
+        ]
     }
 }
