MA-5415 - fix bug with lib

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dotsplatform\\CashbackClient\\": "src/App/"
+            "Dotsplatform\\CashbackApi\\": "src/App/"
         }
     }
 }
