--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dotsplatform\\CashbackApi\\": "src/App/"
+            "src\\": "src/"
         }
     }
 }
