--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "dotsplatform\\cashback-api\\": "src/"
+            "App\\": "src/App"
         }
     }
 }
