--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.5",
-        "ext-json": "*"
+        "ext-json": "*",
+        "vlucas/phpdotenv": "^4.1",
+        "laravel/lumen-framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
