MA-5414 - fix bug with lib

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
             "App\\": "src/App"
         },
         "files": [
-            "src/App/helpers.php"
+            "src/helpers.php"
         ]
     }
 }
