--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,11 @@
     "require": {
         "guzzlehttp/guzzle": "^6.5",
         "ext-json": "*",
-        "vlucas/phpdotenv": "^3.3",
-        "laravel/lumen-framework": "^6.0"
+        "laravel/framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/App"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
+        }
     }
 }
