--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-
+        "guzzlehttp/guzzle": "^6.5",
+        "ext-json": "*",
+        "laravel/framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
