--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "ext-json": "*",
-        "laravel/framework": "^6.0"
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
