MA-6323 - fix composer, fix namespaces

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Dotsplatform\\CashbackApi\\ServiceProvider"
+                "Dotsplatform\\CashbackApi\\CashbackApiServiceProvider"
             ]
         }
     }
