--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.0|^8.1",
         "guzzlehttp/guzzle": "^6.3|^7.",
-        "ext-json": "*"
+        "ext-json": "*",
+        "illuminate/support": "^9.5|^10.0"
     },
     "autoload": {
         "psr-4": {
