--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
+        "php": "^8.0|^8.3",
         "guzzlehttp/guzzle": "^6.3|^7.",
         "ext-json": "*",
-        "illuminate/support": "^9.5|^10.0"
+        "illuminate/support": "^9.5|^10.0|^11."
     },
     "autoload": {
         "psr-4": {
