--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1|^8.3",
+        "php": "^8.1|^8.3",
         "guzzlehttp/guzzle": "^6.3|^7.",
         "ext-json": "*",
         "illuminate/support": "^9.5|^10.0|^11."
