--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.1|^8.3",
         "guzzlehttp/guzzle": "^6.3|^7.",
         "ext-json": "*",
-        "illuminate/support": "^9.5|^10.0|^11."
+        "illuminate/support": "^9.5|^10.0|^11.",
+        "dotsplatform/utils": "^2.3"
     },
     "autoload": {
         "psr-4": {
